# FXION-

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTION_GUIDE.md  Dockerfile  ERROR_HANDLING_GUIDE.md  FINAL_SYSTEM_REPORT.md  FXION_HUD_LAUNCHER.py  FXION_MASTER_CONTROL.py  FXION_MASTER_LAUNCHER.py  FXION_ONYX_FINAL.py  FXION_WATCHDOG.py  IQ4NL_ARCHITECTURE.md  IQ4NL_README.md  Omnitech.IQQuant.psm1  PROJECT_ASPECT.md  QINT2.PY.txt  README.md  SECURITY_BEST_PRACTICES.md  START_OMEGA.bat  ai_engine.py  ai_engine_qfx.py  autotrain_fxion.py  binary_plank_engine.py  bitcoin_miner_qfx.py  build_all_connected.py  convolutive_ai.py  cryptosavior_sdk.py  docker-compose.yml  dual_bios_manager.py  fixion.py.txt  fusion_engine_advanced.py  fusion_engine_kv_optimized.py  fxion_background_service.py  fxion_cipher.py  fxion_cross_backend.py  fxion_entropy_lock.py  fxion_epoch_4272.py  fxion_full_runtime_integration_guide.md  fxion_fusion_6bit_sqrt.py  (+65 more)
.emergent/: emergent.yml
api/: app.py  cyberpunk_dashboard.html  quantum_dashboard.html  quantum_viz.py  stream_server.py
backend/: server.py
backups/: fxion_omega_unified.cfg  fxion_vault.json  pool_config.json
core/: ai_engine.py  ai_engine_qfx.py  cortex_a72_bridge.py  dataset_eval.py  iq4_nl_controller.py  iq4_nl_protocol.py  iq4nl_master_bridge.py  neural_core.py  neural_signature_l0.py  neutrino_ios.py  nx_secure_server.py  oberon_mind_ex.py  policy.py  qfx_optimizer.py  qfx_quant.py  quantizer_rl.py  quantum_genesis.py  scheduler.py  user_config_logic.py  worker.py
dashboard/: fxion_hud.html  omnitech_dashboard.html  (+2 more)
(+57 files in other folders)
